--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1>Welcome!</h1>
+<h1>Welcome!!</h1>
 <p>This is the home page for the PHSX815/PHSX615/CHEM914 class.</p>
 
 <h2>Class Documents</h2>
