Now should work

--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html>
 
 <head>
-<title>PHSX815/PHSX615/CHEM914 Spring 2022</title>
+<title>github hosted web pages</title>
 </head>
 
 <body>
 
-<h1>Welcome!!</h1>
-<p>This is the home page for the PHSX815/PHSX615/CHEM914 class.</p>
+<h1>Welcome!</h1>
+<p>This is the entry portal for various web pages</p>
 
-<h2>Class Documents</h2>
-<p> <a href="Resources/815-615courseinfo_Spring_2022.pdf"> Course Information </a> </p>
-<p> <a href="Resources/815-615Syllabus_Spring_2022.pdf"> Syllabus </a> </p>
-<p> <a href="Resources/815-615_language_stuff_Spring_2022.pdf"> Programming Language Considerations </a> </p>
+<h2>Web Pages</h2>
+<p> <a href="815-615-Home/index.html"> Spring 2022  PHSX815/PHSX615/CHEM914 </a> </p>
 
 </body>
 </html>
