--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -15,5 +15,8 @@
 <p> <a href="Resources/815-615Syllabus_Spring_2022.pdf"> Syllabus </a> </p>
 <p> <a href="Resources/815-615_language_stuff_Spring_2022.pdf"> Programming Language Considerations </a> </p>
 
+<h2>Learning Resources</h2>
+<p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with git and LaTeX </a> </p>
+
 </body>
 </html>
