--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <p>This is the entry portal for various web pages</p>
 
 <h2>Web Pages</h2>
+<p> <a href="315/index.html"> Spring 2022  PHSX315 </a> </p>
 <p> <a href="815-615-Home/index.html"> Spring 2022  PHSX815/PHSX615/CHEM914 </a> </p>
 
 </body>
+
+Graham W. Wilson
 </html>
