--- a/315/index.html
+++ b/315/index.html
@@ -18,7 +18,7 @@ to reflect undergraduate rather than graduate level content</p>
 <p> <a href="Resources/815-615_language_stuff_Spring_2022.pdf"> General Programming Language Considerations </a> </p>
 
 <h2>Learning Resources</h2>
-<p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with git and LaTeX </a> </p>
+<p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with Git and LaTeX </a> </p>
 
 </body>
 </html>
