--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -18,5 +18,8 @@
 <h2>Learning Resources</h2>
 <p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with Git and LaTeX </a> </p>
 
+<h2>Some Class Notes</h2>
+<p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
+
 </body>
 </html>
