Add git repository links

--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -21,5 +21,12 @@
 <h2>Some Class Notes</h2>
 <p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
 
+<h2>Class Related git repositories </h2>
+
+<p> <a href="https://github.com/grahamwwilson/ClassExamples"> ClassExamples </a> </p>
+<p> <a href="https://github.com/grahamwwilson/ClassExamples/tree/main/815"> ClassExamples/815 </a> </p>
+<p> <a href="https://github.com/grahamwwilson/LaTeXTemplate"> LaTeXTemplate </a> </p>
+
+
 </body>
 </html>
