--- a/315/index.html
+++ b/315/index.html
@@ -8,9 +8,8 @@
 <body>
 
 <h1>Welcome!</h1>
-<p>This is the home page for the PHSX315 class. 
-It is currently under construction and needs to be fully updated 
-to reflect undergraduate rather than graduate level content</p>
+<p> This is the home page for the PHSX315 class. 
+It will be updated as necessary. </p>
 
 <h2>Class Documents</h2>
 <p> <a href="Resources/315Syllabus.pdf"> Syllabus </a> </p>
@@ -19,6 +18,13 @@ to reflect undergraduate rather than graduate level content</p>
 
 <h2>Learning Resources</h2>
 <p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with Git and LaTeX </a> </p>
+
+<h2>Class Related git repositories </h2>
+
+<p> <a href="https://github.com/grahamwwilson/ClassExamples"> ClassExamples </a> </p>
+<p> <a href="https://github.com/grahamwwilson/ClassExamples/tree/main/315"> ClassExamples/315 </a> </p>
+<p> <a href="https://github.com/grahamwwilson/LaTeXTemplate"> LaTeXTemplate </a> </p>
+
 
 </body>
 </html>
