--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -27,6 +27,9 @@
 <p> <a href="https://github.com/grahamwwilson/ClassExamples"> ClassExamples </a> </p>
 <p> <a href="https://github.com/grahamwwilson/LaTeXTemplate"> LaTeXTemplate </a> </p>
 
+<h2>Homework assignments </h2>
+
+<p> <a href="Homework/index.html"> Homework </a> </p>
 
 </body>
 </html>
