--- a/315/index.html
+++ b/315/index.html
@@ -24,6 +24,11 @@ It will be updated as necessary. </p>
 <p> <a href="https://github.com/grahamwwilson/ClassExamples"> ClassExamples </a> </p>
 <p> <a href="https://github.com/grahamwwilson/LaTeXTemplate"> LaTeXTemplate </a> </p>
 
+<h2>Some Class Notes</h2>
+<p> <a href="Scrawls/315-04-FEB-2022.pdf"> Fri. Feb 04 </a> </p>
+
+<h2>Homework assignments </h2>
+<p> <a href="Homework/index.html"> Homework </a> </p>
 
 </body>
 </html>
