--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -17,6 +17,7 @@
 
 <h2>Learning Resources</h2>
 <p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with Git and LaTeX </a> </p>
+<p> <a href="https://ubuntu.com/tutorials/command-line-for-beginners"> Getting started with the command line interface (CLI) </a> </p>
 
 <h2>Some Class Notes</h2>
 <p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
