--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -22,6 +22,7 @@
 <h2>Some Class Notes</h2>
 <p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
 <p> <a href="Scrawls/815-01-FEB-2022/Concatenated.pdf"> Tue. Feb 01 </a> </p>
+<p> <a href="Scrawls/815-22-FEB-2022/index.html"> Tue. Feb 22 </a> </p>
 
 <h2>Class Related git repositories </h2>
 
