--- a/315/index.html
+++ b/315/index.html
@@ -19,6 +19,8 @@ It will be updated as necessary. </p>
 <h2>Learning Resources</h2>
 <p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with Git and LaTeX </a> </p>
 <p> <a href="https://ubuntu.com/tutorials/command-line-for-beginners"> Getting started with the command line interface (CLI) </a> </p>
+<p> <a href="https://www.overleaf.com/learn"> Overleaf and LaTeX documentation </a> </p>
+<p> <a href="https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes"> Learn LaTeX in 30 minutes</a> </p>
 
 <h2>Class Related git repositories </h2>
 
