Add scientific computing best practices papers

--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -20,6 +20,8 @@
 <p> <a href="https://ubuntu.com/tutorials/command-line-for-beginners"> Getting started with the command line interface (CLI) </a> </p>
 <p> <a href="https://www.overleaf.com/learn"> Overleaf and LaTeX documentation </a> </p>
 <p> <a href="https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes"> Learn LaTeX in 30 minutes</a> </p>
+<p> <a href="https://journals.plos.org/plosbiology/article/file?id=10.1371/journal.pbio.1001745&type=printable"> Best Practices Paper </a> </p>
+<p> <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1005510&type=printable"> Good Enough Practices Paper </a> </p>
 
 <h2>Some Class Notes</h2>
 <p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
