--- a/315/Homework/index.html
+++ b/315/Homework/index.html
@@ -11,6 +11,7 @@
 
 <p> <a href="HW1/HW1.pdf"> HW1 </a> </p>
 <p> <a href="HW2/index.html" > HW2 </a> </p>
+<p> <a href="HW4/index.html" > HW4 </a> </p>
 
 </body>
 </html>
