Add more class notes

--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -27,6 +27,8 @@
 <p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
 <p> <a href="Scrawls/815-01-FEB-2022/Concatenated.pdf"> Tue. Feb 01 </a> </p>
 <p> <a href="Scrawls/815-22-FEB-2022/index.html"> Tue. Feb 22 </a> </p>
+<p> <a href="Scrawls/Mar31/Concatenated.pdf"> Thur. Mar 31 </a> </p>
+<p> <a href="Scrawls/Miscellaneous/Concatenated.pdf"> Miscellaneous </a> </p>
 
 <h2>Class Related git repositories </h2>
 
