--- a/815-615-Home/Homework/index.html
+++ b/815-615-Home/Homework/index.html
@@ -12,7 +12,7 @@
 <p> <a href="HW1/HW1.pdf"> HW1 </a> </p>
 <p> <a href="HW2/index.html" > HW2 </a> </p>
 <p> <a href="HW4/index.html" > HW4 </a> </p>
-<p> <a href="HW5/index.html" > HW5 Draft </a> </p>
+<p> <a href="HW5/index.html" > HW5 </a> </p>
 
 </body>
 </html>
