Add HW6 for 815

--- a/815-615-Home/Homework/index.html
+++ b/815-615-Home/Homework/index.html
@@ -13,6 +13,7 @@
 <p> <a href="HW2/index.html" > HW2 </a> </p>
 <p> <a href="HW4/index.html" > HW4 </a> </p>
 <p> <a href="HW5/index.html" > HW5 </a> </p>
+<p> <a href="HW6/index.html" > HW6 </a> </p>
 
 </body>
 </html>
