--- a/815-615-Home/index.html
+++ b/815-615-Home/index.html
@@ -11,9 +11,9 @@
 <p>This is the home page for the PHSX815/PHSX615/CHEM914 class.</p>
 
 <h2>Class Documents</h2>
-<p> <a href="Resources/815-615courseinfo_Spring_2022.pdf"> Course Information </a> </p>
-<p> <a href="Resources/815-615Syllabus_Spring_2022.pdf"> Syllabus </a> </p>
-<p> <a href="Resources/815-615_language_stuff_Spring_2022.pdf"> Programming Language Considerations </a> </p>
+<p> <a href="Resources/815-615courseinfo_Spring_2025.pdf"> Course Information </a> </p>
+<p> <a href="Resources/815-615Syllabus_Spring_2025.pdf"> Syllabus </a> </p>
+<p> <a href="Resources/815-615_language_stuff_Spring_2025.pdf"> Programming Language Considerations </a> </p>
 
 <h2>Learning Resources</h2>
 <p> <a href="Resources/gitLaTeX-GettingStarted.pdf"> Getting started with Git and LaTeX </a> </p>
@@ -23,10 +23,21 @@
 <p> <a href="https://journals.plos.org/plosbiology/article/file?id=10.1371/journal.pbio.1001745&type=printable"> Best Practices Paper </a> </p>
 <p> <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1005510&type=printable"> Good Enough Practices Paper </a> </p>
 
+<h2>Some Class Notes</h2>
+<p> <a href="Scrawls/815-25-JAN-2022.pdf"> Tue. Jan 25 </a> </p>
+<p> <a href="Scrawls/815-01-FEB-2022/Concatenated.pdf"> Tue. Feb 01 </a> </p>
+<p> <a href="Scrawls/815-22-FEB-2022/index.html"> Tue. Feb 22 </a> </p>
+<p> <a href="Scrawls/Mar31/Concatenated.pdf"> Thur. Mar 31 </a> </p>
+<p> <a href="Scrawls/Miscellaneous/Concatenated.pdf"> Miscellaneous </a> </p>
+
 <h2>Class Related git repositories </h2>
 
 <p> <a href="https://github.com/grahamwwilson/ClassExamples"> ClassExamples </a> </p>
 <p> <a href="https://github.com/grahamwwilson/LaTeXTemplate"> LaTeXTemplate </a> </p>
+
+<h2>Homework assignments </h2>
+
+<p> <a href="Homework/index.html"> Homework </a> </p>
 
 </body>
 </html>
